samples/_failures_safe/1761491023_7886fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d4e78dae.c: In function ‘main’:
./samples/SAFE/__tmp_d4e78dae.c:155:19: error: expected ‘;’ at end of input
  155 |     graph_add_edge
      |                   ^
      |                   ;
./samples/SAFE/__tmp_d4e78dae.c:155:5: error: expected declaration or statement at end of input
  155 |     graph_add_edge
      |     ^~~~~~~~~~~~~~
